{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 220,
  "lineage": "9f10701e-0de6-c7af-250c-ff386705231b",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:security-group/sg-0800ff73c92f0b464",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0800ff73c92f0b464",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              }
            ],
            "name": "eks_cluster_sg",
            "name_prefix": "",
            "owner_id": "550869874364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster_sg",
              "kubernetes.io/cluster/elaniin-names-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_sg",
              "kubernetes.io/cluster/elaniin-names-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099ff05c1ee9c48d5",
            "domain": "vpc",
            "id": "eipalloc-099ff05c1ee9c48d5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-39-221.compute-1.amazonaws.com",
            "public_ip": "3.228.39.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068f5c0a70c4abb4f",
            "domain": "vpc",
            "id": "eipalloc-068f5c0a70c4abb4f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-173-152-230.compute-1.amazonaws.com",
            "public_ip": "54.173.152.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:internet-gateway/igw-00daaf51d14d9ad33",
            "id": "igw-00daaf51d14d9ad33",
            "owner_id": "550869874364",
            "tags": {
              "Name": "main_igw"
            },
            "tags_all": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099ff05c1ee9c48d5",
            "association_id": "eipassoc-0fda6d00c0c69fc1a",
            "connectivity_type": "public",
            "id": "nat-0a9c86e0ffb071098",
            "network_interface_id": "eni-057ff7d499fb09922",
            "private_ip": "10.0.5.95",
            "public_ip": "3.228.39.221",
            "subnet_id": "subnet-0454812e6122e4a73",
            "tags": {
              "Name": "nat-0"
            },
            "tags_all": {
              "Name": "nat-0"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eips",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068f5c0a70c4abb4f",
            "association_id": "eipassoc-0687374d976b57851",
            "connectivity_type": "public",
            "id": "nat-05706412fe5f01067",
            "network_interface_id": "eni-066dc603400e4b23c",
            "private_ip": "10.0.6.154",
            "public_ip": "54.173.152.230",
            "subnet_id": "subnet-0042db8721bba5769",
            "tags": {
              "Name": "nat-1"
            },
            "tags_all": {
              "Name": "nat-1"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eips",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_eks_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:route-table/rtb-0fc9c53a5379cb3ec",
            "id": "rtb-0fc9c53a5379cb3ec",
            "owner_id": "550869874364",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a9c86e0ffb071098",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_eks_rt"
            },
            "tags_all": {
              "Name": "private_eks_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eips",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_nat_gateway.nat_gws",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rds_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:route-table/rtb-0d1a10a775da20f77",
            "id": "rtb-0d1a10a775da20f77",
            "owner_id": "550869874364",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rds_rt"
            },
            "tags_all": {
              "Name": "private_rds_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:route-table/rtb-0ecc173f8ee7edd0a",
            "id": "rtb-0ecc173f8ee7edd0a",
            "owner_id": "550869874364",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00daaf51d14d9ad33",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_eks_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aa0832db517cb69",
            "route_table_id": "rtb-0fc9c53a5379cb3ec",
            "subnet_id": "subnet-071c6ddd3cad2ff30"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eips",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_nat_gateway.nat_gws",
            "module.networking.aws_route_table.private_eks_rt",
            "module.networking.aws_subnet.private_subnets_eks",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a85232d9d49fab61",
            "route_table_id": "rtb-0fc9c53a5379cb3ec",
            "subnet_id": "subnet-0247ff04e74113ea3"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eips",
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_nat_gateway.nat_gws",
            "module.networking.aws_route_table.private_eks_rt",
            "module.networking.aws_subnet.private_subnets_eks",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rds_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0143f367931d339f5",
            "route_table_id": "rtb-0d1a10a775da20f77",
            "subnet_id": "subnet-0f9cde172a94065f0"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_rds_rt",
            "module.networking.aws_subnet.private_subnets_rds",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a13af06842abe41",
            "route_table_id": "rtb-0d1a10a775da20f77",
            "subnet_id": "subnet-0f99e69b6b8d7d667"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_rds_rt",
            "module.networking.aws_subnet.private_subnets_rds",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01244da43cbcb6722",
            "route_table_id": "rtb-0ecc173f8ee7edd0a",
            "subnet_id": "subnet-0454812e6122e4a73"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8466118acca1580",
            "route_table_id": "rtb-0ecc173f8ee7edd0a",
            "subnet_id": "subnet-0042db8721bba5769"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main_igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:subnet/subnet-071c6ddd3cad2ff30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071c6ddd3cad2ff30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550869874364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/elaniin-names-app": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/elaniin-names-app": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:subnet/subnet-0247ff04e74113ea3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0247ff04e74113ea3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550869874364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/elaniin-names-app": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/elaniin-names-app": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:subnet/subnet-0f9cde172a94065f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9cde172a94065f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550869874364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets_rds_0"
            },
            "tags_all": {
              "Name": "private_subnets_rds_0"
            },
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:subnet/subnet-0f99e69b6b8d7d667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f99e69b6b8d7d667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550869874364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets_rds_1"
            },
            "tags_all": {
              "Name": "private_subnets_rds_1"
            },
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:subnet/subnet-0454812e6122e4a73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0454812e6122e4a73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "550869874364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/elaniin-names-app": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/elaniin-names-app": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:subnet/subnet-0042db8721bba5769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0042db8721bba5769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "550869874364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/elaniin-names-app": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/elaniin-names-app": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:vpc/vpc-0a1144f95ce84e340",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c458302e7f45c5f",
            "default_route_table_id": "rtb-0a278bd7132ad399a",
            "default_security_group_id": "sg-0337845be540945d6",
            "dhcp_options_id": "dopt-07baa0ed66c365ee0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1144f95ce84e340",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a278bd7132ad399a",
            "owner_id": "550869874364",
            "tags": {
              "Name": "main_vpc",
              "kubernetes.io/cluster/elaniin-names-app": "shared"
            },
            "tags_all": {
              "Name": "main_vpc",
              "kubernetes.io/cluster/elaniin-names-app": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550869874364:security-group/sg-0b5bc6e5d98d36fea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5bc6e5d98d36fea",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "550869874364",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a1144f95ce84e340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}